@@ -4,6 +4,7 @@ master
     - Thread Updater.
     - Quote Inlining.
     - Quote Previewing.
+    - Thread Expansion.
     - Comment Expansion.
 
 2.34.10
